locked diffusers version; shifted to float16 instead of bfloat16

--- a/Aesthetic_Experiments_with_FLUX_(2024_08).ipynb
+++ b/Aesthetic_Experiments_with_FLUX_(2024_08).ipynb
@@ -18,11 +18,11 @@
       "source": [
         "# **Aesthetic Experiments with FLUX (Schnell) txt2img **\n",
         "\n",
-        "**Requires A100: about 26 Gb of GPU**\n",
+        "**Requires A100: about 40 Gb of GPU**\n",
         "\n",
         "https://github.com/black-forest-labs/flux\n",
         "\n",
-        "**FLUX takes only about 14 seconds per image after 90s startup**\n",
+        "**FLUX takes only about 4 seconds per image after 10 minute startup**\n",
         "\n",
         "The goal of this notebook is to allow the user to explore and hone in on a set of prompts that will work for a wide variety of scenes.  \n",
         "\n",
@@ -226,9 +226,7 @@
       "source": [
         "#@title installs\n",
         "\n",
-        "!pip install -q torch torchvision #\n",
-        "!pip install -q transformers accelerate diffusers\n",
-        "\n",
+        "!pip -q install \"diffusers==0.31.0\"\n",
         "\n"
       ],
       "metadata": {
@@ -242,29 +240,31 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "vohUiWo-I2HQ"
+        "id": "vohUiWo-I2HQ",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
-        "#@title make pipeline\n",
-        "# https://huggingface.co/blog/lcm_lora\n",
+        "#@title make pipeline (about 10 minutes on A100)\n",
         "\n",
         "#@markdown NOTE: you may be asked for a HuggingFace Token (HF_TOKEN), if so, put it in your Colab \"Secrets\" (the key shape on the left of the screen)\n",
+        "\n",
+        "#@markdown NOTE: sometimes this runs out of memory, in which case restart the colab and run the cells again\n",
         "import torch\n",
         "from diffusers import FluxPipeline\n",
         "\n",
         "model_id = \"black-forest-labs/FLUX.1-schnell\" #you can also use `black-forest-labs/FLUX.1-dev`\n",
         "# for schnell:\n",
         "pipe_steps=4\n",
+        "dtype = torch.float16 # can only do intepolation with float16\n",
         "\n",
-        "pipe = FluxPipeline.from_pretrained(model_id, torch_dtype=torch.bfloat16)\n",
-        "pipe.enable_model_cpu_offload() # really need this.  save some VRAM by offloading the model to CPU. Remove this if you have enough GPU power\n",
+        "pipe = FluxPipeline.from_pretrained(model_id, torch_dtype=dtype,\n",
+        "                                    device_map=\"balanced\")\n",
         "\n",
-        "# pipe.enable_sequential_cpu_offload() # really slow, but can run on small GPU\n",
-        "\n",
-        "# needs 26Gb with or without, but a little quicker to start up and still 14s\n",
-        "pipe.vae.enable_slicing() #\n",
-        "pipe.vae.enable_tiling() #\n",
+        "# will just fit onto a 40Gb A100\n",
+        "pipe.vae.enable_slicing()\n",
+        "pipe.vae.enable_tiling()\n",
+        "pipe.set_progress_bar_config(disable=True)\n",
         "\n",
         "\n"
       ]
@@ -401,22 +401,22 @@
         "# Update this with your lines.\n",
         "\n",
         "# Shakespeare's Sonnet 154\n",
-        "# two lines only for testing\n",
+        "#\n",
         "lines = [\n",
         "  \"The little love-god lying once asleep\",\n",
         "  \"Laid by his side his heart-inflaming brand,\",\n",
-        "  # \"Whilst many nymphs that vow'd chaste life to keep\",\n",
-        "  # \"Came tripping by; but in her maiden hand\",\n",
-        "  # \"The fairest votary took up that fire\",\n",
-        "  # \"Which many legions of true hearts had warm'd;\",\n",
-        "  # \"And so the general of hot desire\",\n",
-        "  # \"What sleeping by a virgin hand disarm'd.\",\n",
-        "  # \"This brand she quenched in a cool well by,\",\n",
-        "  # \"Which from Love's fire took heat perpetual,\",\n",
-        "  # \"Growing a bath and healthful remedy\",\n",
-        "  # \"For men diseased; but I, my mistress' thrall,\",\n",
-        "  # \"Came there for cure, and this by that I prove,\",\n",
-        "  # \"Love's fire heats water, water cools not love.\",\n",
+        "  \"Whilst many nymphs that vow'd chaste life to keep\",\n",
+        "  \"Came tripping by; but in her maiden hand\",\n",
+        "  \"The fairest votary took up that fire\",\n",
+        "  \"Which many legions of true hearts had warm'd;\",\n",
+        "  \"And so the general of hot desire\",\n",
+        "  \"What sleeping by a virgin hand disarm'd.\",\n",
+        "  \"This brand she quenched in a cool well by,\",\n",
+        "  \"Which from Love's fire took heat perpetual,\",\n",
+        "  \"Growing a bath and healthful remedy\",\n",
+        "  \"For men diseased; but I, my mistress' thrall,\",\n",
+        "  \"Came there for cure, and this by that I prove,\",\n",
+        "  \"Love's fire heats water, water cools not love.\",\n",
         "\n",
         "]\n",
         "\n",
@@ -1489,7 +1489,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "zgQGyRlY9cBN"
+        "id": "zgQGyRlY9cBN",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -1744,11 +1745,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "jcs_5ocgaoBM"
+        "id": "jcs_5ocgaoBM",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
-        "# testing\n",
+        "#@title testing\n",
         "\n",
         "try:\n",
         "    cur_core_prompt_dict = get_core_prompt()\n",
@@ -1803,11 +1805,11 @@
         "from pathlib import Path\n",
         "import re\n",
         "\n",
-        "attempts = 20  #@param\n",
+        "attempts = 2  #@param\n",
         "kill_when_done = False #@param{type:\"boolean\"}\n",
         "\n",
         "#@markdown much faster if you don't show images\n",
-        "show_images = False #@param{type:\"boolean\"}\n",
+        "show_images = True #@param{type:\"boolean\"}\n",
         "\n",
         "#@markdown if greater than zero will only do the first max_lines\n",
         "max_lines = 0 #@param{type:\"integer\"}\n",
@@ -1836,7 +1838,7 @@
         "\n",
         "\n",
         "for a in range(attempts):\n",
-        "  display.clear_output(wait=True)\n",
+        "  # display.clear_output(wait=True)\n",
         "\n",
         "  for line_number in range(len(lines)):\n",
         "    if max_lines > 0 and line_number >= max_lines:\n",
@@ -2342,7 +2344,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "5owwhP6kOUEf"
+        "id": "5owwhP6kOUEf",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -2370,7 +2373,7 @@
         "kill_when_done = False #@param{type:\"boolean\"}\n",
         "\n",
         "#@markdown much faster if you don't show images\n",
-        "show_images = False #@param{type:\"boolean\"}\n",
+        "show_images = True #@param{type:\"boolean\"}\n",
         "\n",
         "\n",
         "# move the accepted directories to the review path\n",
@@ -2417,9 +2420,10 @@
         "# take these from the final prompt votes\n",
         "\n",
         "lines_in_difficult_order = [\n",
-        " 0,1\n",
-        "\n",
-        "\n",
+        " 0,1,2,3,\n",
+        " 4,5,6,7,\n",
+        " 8,9,10,11,\n",
+        " 12,13,\n",
         "]\n",
         "\n",
         "#@markdown how many lines to test, go: 2, 4, 8, 16, -1 (all)\n",
@@ -2803,8 +2807,8 @@
         "  if quit:\n",
         "    break\n",
         "\n",
-        "  if i % 10 == 0:\n",
-        "    display.clear_output(wait=True)\n",
+        "  # if i % 10 == 0:\n",
+        "  #   display.clear_output(wait=True)\n",
         "\n",
         "  print(f\"\\n\\n ({i+1:2} / {total_dirs:3}) {accept_cnt:3}/{skip_cnt:3}/{delete_cnt:3}\\n{sd.name}\")\n",
         "  # lines_to_use = get_lines_from_path(sd)\n",
@@ -3038,7 +3042,7 @@
         "kill_when_done = False #@param{type:\"boolean\"}\n",
         "\n",
         "#@markdown much faster if you don't show images\n",
-        "show_images = False #@param{type:\"boolean\"}\n",
+        "show_images = True #@param{type:\"boolean\"}\n",
         "\n",
         "#@markdown within SeqAccepted if you want to do just one\n",
         "settings_dir =  \"\" #@param{type:\"string\"}\n",
@@ -3157,7 +3161,8 @@
         "\n"
       ],
       "metadata": {
-        "id": "ZWEAA7Cj5nOU"
+        "id": "ZWEAA7Cj5nOU",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
